z-index fix

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -112,6 +112,10 @@
     .clg_btn {
         display: block;
     }
+
+.clg_btn button {
+    margin-bottom: 10px;
+}
     
     .change .clg_btn button {
         margin-bottom: 15px;
